# forward-epics-to-kafka

./: CMakeLists.txt  Jenkinsfile  README.md
conan/: conanfile-package.txt  conanfile.txt  conanfile_win32.txt
src/: CMakeLists.txt  CURLReporter.h  ConversionWorker.cpp  Converter.cpp  EpicsClient.cpp  FlatbufferMessage.cpp  Forwarder.cpp  Forwarder.h  Kafka.cpp  KafkaOutput.cpp  Main.cpp  Main.cxx  Main.h  MainOpt.cpp  RangeSet.h  Ring.cpp  Stream.cpp  Stream.cxx  Stream.h  Streams.cpp  Streams.cxx  Streams.h  forward-epics-to-kafka.cpp  logger.cpp  logger.h  read-buffer.cpp  schema_f141_epics_nt.cpp
src/KafkaW/: Producer.cpp
src/schemas/f142/: f142.cpp
src/tests/: CMakeLists.txt  remote.cpp  remote.cxx
utils/: config.json
